--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,13 @@
-version: 3.5
+version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/python:3.7.4
+    machine:
+      image: circleci/classic:edge
     steps:
       - checkout
       - run:
-          name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install pytest
-            pip install pytest-cov
-            pip install -e ./.
+          name: docker-compose build
+          command: docker-compose build
       - run:
-          name: run test
-          command: |
-            . venv/bin/activate
-            pytest --junitxml=test-reports/junit.xml
-      - store-test-results:
-          path: test-reports
-      - run:
-          name: run test-cov
-          command: |
-            . venv/bin/activate
-            pytest --cov=src
-            # pytest --cov=src --cov-report=html:test-reports
-            # pytest --cov=src --cov-report=xml:test-reports
+          name: docker-compose up
+          command: docker-compose up -d
