--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ sqlalchemy = "==1.3.6"
 pymssql = "==2.1.4"
 click = "==7.0"
 pandas = "==0.25.0"
+pymysql = "*"
 
 [requires]
 python_version = "3.7"
